# openid-connect

./: autoapp.py  pyproject.toml
instance/: development.py
migrations/versions/: 96700aabd5eb_.py  a7fba2b30446_.py
openid_connect/: admin.py  app.py  extensions.py  home.py  models.py
openid_connect/templates/: _base.html  customers.html  home.html
tests/: test_openid_connect.py
timetracking/: admin.py  app.py  extensions.py  home.py  models.py
timetracking/static/css/: custom.css
timetracking/templates/: _base.html  customer_detail.html  customers.html  home.html  project_details.html
