[tool.poetry]
name = "openid-connect"
version = "0.1.0"
description = ""
authors = ["Bruno Bonfils <bbonfils@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-pyoidc = "^3.0"
flask-sqlalchemy = "^2.4"
flask-migrate = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
